Version 0.7.0-ALPHA
	|- Compiler:  fixed objects added using the using instruction where not
	|             touched by the PreProcessor
	|- Compiler:  fixed StackOverflow case with this variable
	|- Compiler:  using directive threw out folder path instead of file path
	|- Compiler:  using now is generalized (no difference between local and std
	|             includes) thus syntax changed:
	|             using ::foo::bar
	|             instead of
	|             using "::foo::bar" or using <::foo::bar>
	|- Compiler:  fixed invalid encapsulation on object function "toString"
	|- Compiler:  Changed cast operator from %...% to <...>
	|- Compiler:  fixed templates only could use native types
	|- Compiler:  added internal class "array"
	|- Compiler:  added internal class "string"
	|- Compiler:  Parser is more solid now (side effect thx to EBNF changes)
	|- Compiler:  Fixed CfgFunctions class is never written out regardless of
	|             the NFNC flag
	|- Compiler:  Fixed invalid distinction between variable and function when
	|             using a class variable with an object as type
	|- Compiler:  class & native syntax now supports flags
	|             (not important for generic oos users)
	|             `class <IDENT> flags <FLAG1> <FLAG2> <FLAGN>`
	|             Flags which got introduced:
	|             - disableConstructor
	|             - noObjectExtends
	|             - virtualFunctionsOnly (not available in native)
	|- Compiler:  Introduced enum's. They got following syntax:
	|             enum { <IDENT1> [ = <VALUE2> ], <IDENTN> [ = <VALUEN> ] }
	|- Compiler:  SQF instruction now supports forcedType via "as". Example:
	|             `SQF allPlayers as ::std::Array<::std::Men>`
	|- stdLib:    added ::std::UI::Display object
	|- stdLib:    added ::std::UI::Control object
	|- stdLib:    added ::std::Marker object
	|- stdLib:    fixed invalid typing in ::std::base::VehicleBase object
	|- stdLib:    removed ::std::Array object (moved to internal classes)